[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/minigames/berserker_minigame.gd" id="1_berserker_minigame"]

[node name="BerserkerMinigame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_berserker_minigame")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.1, 0.05, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Berserker Minigame (Blackjack)"
horizontal_alignment = 1

[node name="HandValueLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Hand Value: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="CardsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Cards: "
horizontal_alignment = 1
autowrap_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HitButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Hit"

[node name="StandButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Stand"
